ci: Add cache clearing job and update permissions in GitHub Actions workflow